--- a/3.configuration.md
+++ b/3.configuration.md
@@ -47,14 +47,16 @@ dan juga bisa kita untuk `difftool`
 ```cmd
 git config --global core.editor "code --wait"
 ```
+> note : fungsi dari option --wait , berguna untuk agar terminal tidak keluar saat sedang membuak applian dan dia ngehang , menunggu
 note: untuk option wait berguna hanya tambahan, jika kita ingin code editor tetap terbuka saat kita belum save, jadi tidak menggunakan option --wait juga tidak apa apa
 
 
 ***code setting untuk diff tool***
 ```
-git config --global diff.tool vscode
+git config --global diff.tool "default-difftool"
 
-git config --global difftool.vscode.cmd 'code --wait --diff $LOCAL $REMOTE
+git config --global difftool.vscode.cmd "code --wait --diff $LOCAL $REMOTE"
+
 
 ```
 
